[package]
name = "container"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
containerd-client = "0.8.0"
oci-spec = "0.7.1"
prost = "0.13"
prost-types = "0.13"
prost-helper = "0.8"
tokio = { version = "1.4", features = ["rt-multi-thread", "macros", "time"] }
tonic = "0.12"
tower = "0.5"
k8s-cri = "0.10"
hyper-util = "0.1"
serde_json = "1.0"
serde = "1.0"
